[project]
name = "qwen-jsontool"
version = "0.1.0"
description = "Streaming SSE proxy that buffers and reassembles incomplete tool calls from Qwen/MiniMax models via litellm"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.9",
    "loguru>=0.7",
]

[project.optional-dependencies]
deploy = [
    "gunicorn>=23.0",
    "aiohttp-gunicorn",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
qwen-jsontool = "qwen_jsontool.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qwen_jsontool"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]