[project]
name = "llm-toolstream-proxy"
version = "0.1.0"
description = "Streaming SSE proxy that buffers and reassembles incomplete tool calls from LLM backends (Qwen, MiniMax, vllm, ollama) via litellm"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
    "loguru>=0.7",
]

[project.optional-dependencies]
deploy = [
    "gunicorn>=23.0",
]
uvloop = [
    "uvloop>=0.19",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.11",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "tests.*"
strict = false
disable_error_code = ["no-untyped-def", "type-arg"]

[project.scripts]
llm-toolstream-proxy = "llm_toolstream_proxy.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_toolstream_proxy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]